syntax = "proto3";

package fleet;

service FleetService {
  rpc CreateFleet (CreateFleetRequest) returns (Fleet) {}
  rpc GetFleet (GetFleetRequest) returns (Fleet) {}
  rpc UpdateFleet (UpdateFleetRequest) returns (Fleet) {}
  rpc DeleteFleet (DeleteFleetRequest) returns (DeleteFleetResponse) {}
  rpc ListFleets (ListFleetsRequest) returns (ListFleetsResponse) {}
  rpc AssignDriver (AssignDriverRequest) returns (Fleet) {}
  rpc TrackFleet (TrackFleetRequest) returns (Fleet) {}
}

message Fleet {
  // ID and Type Info
  string id = 1;
  string vehicleType = 2;
  string licensePlate = 3;
  
  // Vehicle Details
  string make = 4;
  string modelName = 5;
  int32 year = 6;
  int32 capacity = 7;
  
  // Fuel Information
  string fuelType = 8;
  double fuelLevel = 9;
  
  // Driver Information
  string driverId = 10;
  string driverName = 11;
  string driverContact = 12;
  string driverLicenseNumber = 13;
  
  // Status and Tracking
  string status = 14;
  string lastMaintenanceDate = 15;
  int32 mileage = 16;
  Location currentLocation = 17;
  
  // Additional Fields from Schema
  string fleetType = 18;
  string registrationNumber = 19;
  string manufacturer = 20;
  repeated MaintenanceRecord maintenanceRecords = 21;
  string lastUpdated = 22;
  map<string, string> meta = 23;
}

message Location {
  double latitude = 1;
  double longitude = 2;
  string address = 3;
  string timestamp = 4;
}

message MaintenanceRecord {
  string id = 1;
  string type = 2;
  string description = 3;
  string date = 4;
  string status = 5;
  double cost = 6;
  string technician = 7;
  string notes = 8;
}

message CreateFleetRequest {
  Fleet fleet = 1;
}

message GetFleetRequest {
  string id = 1;
}

message UpdateFleetRequest {
  string id = 1;
  Fleet fleet = 2;
}

message DeleteFleetRequest {
  string id = 1;
}

message DeleteFleetResponse {
  bool success = 1;
  string message = 2;
}

message ListFleetsRequest {
  int32 page = 1;
  int32 limit = 2;
  string status = 3;
  string vehicleType = 4;
  string driverId = 5;
  string fleetType = 6;
}

message ListFleetsResponse {
  repeated Fleet fleets = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message AssignDriverRequest {
  string fleetId = 1;
  string driverId = 2;
  string driverName = 3;
  string driverContact = 4;
  string driverLicenseNumber = 5;
}

message TrackFleetRequest {
  string fleetId = 1;
}
